--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,9 @@
 <form action="/login" method="post" class="form-contact">
     <p><label>Имя: </label> <input type="text" name="username" value="" required /></p>
     <p><label>Пароль: </label> <input type="password" name="psw" value="" required /></p>
+    <p><input type="checkbox" name="remainme" />Запомнить меня</p>
     <p><input type="submit" value="Войти"></p>
+    <hr align="left" width="300px">
+    <p><a href="{{url_for('register')}}">Регистрация</a></p>
 </form>
 {% endblock %}
