--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
 <form action="/login" method="post" class="form-contact">
-    <p><label>Имя: </label> <input type="text" name="username" value="" required /></p>
+    <p><label>Email: </label> <input type="text" name="email" value="" required /></p>
     <p><label>Пароль: </label> <input type="password" name="psw" value="" required /></p>
     <p><input type="checkbox" name="remainme" />Запомнить меня</p>
     <p><input type="submit" value="Войти"></p>
