--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
-<form action="/login" method="post" class="form-contact">
+<form action="" method="post" class="form-contact">
     <p><label>Email: </label> <input type="text" name="email" value="" required /></p>
     <p><label>Пароль: </label> <input type="password" name="psw" value="" required /></p>
     <p><input type="checkbox" name="remainme" />Запомнить меня</p>
