--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,9 +7,9 @@
     {% endfor %}
     <table border="0" class="profile-table">
     <tr><td valign="top">
-        <div class="profile-ava"><img src="{{ url_for('userava') }}"></div>
+        <div class="profile-ava"><img src="{{ url_for('userava') }}" alt="avatar"></div>
         <div class="profile-load">
-            <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
+            <form action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
                 <p><input type="file" name="file"></p>
                 <p><input type="submit" value="Загрузить"></p>
             </form>
