--- a/templates/register.html
+++ b/templates/register.html
@@ -6,10 +6,22 @@
 <div class="flash {{cat}}">{{msg}}</div>
 {% endfor %}
 <form action="/register" method="post" class="form-contact">
-    <p><label>Имя: </label> <input type="text" name="name" value="" required /></p>
-    <p><label>Email: </label> <input type="text" name="email" value="" required /></p>
-    <p><label>Пароль: </label> <input type="password" name="psw" value="" required /></p>
-    <p><label>Повтор пароля: </label> <input type="password" name="psw2" value="" required /></p>
-    <p><input type="submit" value="Регистрация"></p>
+    {{ form.hidden_tag() }}
+
+{% for field in form if field.name not in ['csrf_token','submit'] %}
+<p>{{ field.label() }}
+{% if field.errors %}
+        {{ field(class="invalid") }}
+        <span class="invalid-feedback">
+            {% for e in field.errors %}
+            {{ e }}
+            {% endfor %}
+        </span>
+    {% else %}
+        {{ field() }}
+    {% endif %}
+{% endfor %}
+
+    <p>{{ form.submit() }}</p>
 </form>
 {% endblock %}
